# mantisvex-Q

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DynBand.cpp  DynBand.h  EQBand.cpp  EQBand.h  SpectrumAnalyzer.h
Source/GUI/: BandColors.h  EQDisplay.cpp  EQDisplay.h  MantisLookAndFeel.h
